--- a/ZMS/trunk/changes.txt
+++ b/ZMS/trunk/changes.txt
@@ -1401,4 +1401,14 @@ Risk: Adding link-element zombies without prefix ('e')!
 [01283] Revised deletion of blob-fields (images/files): do not submit form instantly, deletion has to be executed by Save-Button.
 [01284] Removed getCoords() from main_js.
 Measure: Use position() from jquery.position instead! Re-Import ZMSTable from zms-defaults.
-----------------------------------------------------------------------------------------------------
+--------------------------------------------------
+2009-11-12:zms2-2.12.1-03
+[01285] Added support for auto-replication to local-fs: ids:list=*.
+[01286] Applied fix for non-repetitive sub-objects with id-suffix.
+Measure: Call initObjChildren() on container-objects.
+--------------------------------------------------
+2009-11-12:zms2-2.12.1-04
+[01287] Applied fix for ZMSTable: ValueError for table_type=4 in MSIE (reported by xm).
+Measure: Re-import content-object configuration for ZMSTable [1.2.0]
+[01288] Applied fix for inlined submit-buttons after last primitive-attribute before first complex-attribute.
+--------------------------------------------------
