--- a/ZMS/trunk/changes.txt
+++ b/ZMS/trunk/changes.txt
@@ -1418,3 +1418,8 @@ Measure: Re-import content-object configuration for ZMSTable [1.2.0]
 2009-12-10:zms2-2.12.1-06
 [01290] Added type(ZMSReference) to ZMS.e-Objects
 --------------------------------------------------
+2009-12-10:zms2-2.12.1-07
+[01291] Applied fix for abort-teaser-penetrance: 0 or '' deactivate penetrance (reported by uni-cgn).
+[01292] Applied fix for self-learning auto-complete attributes (reported by uni-cgn).
+[01293] Added support for standard_cache_header for cached-pages (reported by uni-cgn).
+--------------------------------------------------
