--- a/ZMS/trunk/changes.txt
+++ b/ZMS/trunk/changes.txt
@@ -1444,5 +1444,6 @@ Measure: Re-import content-object configuration for ZMSTable [1.2.0]
 --------------------------------------------------
 2010-02-16:zms2-2.12.1-13
 [01302] Added support for Python-Script read/write for meta-commands.
-[01303] Added support for Python-Script read/write for meta-objects. 
+[01303] Added support for Python-Script read/write for meta-objects.
+[01304] Applied fixes for ZMI HTML validity (manage_page_header, manage_importexportdebugfilter.dtml, manage_bodytop.dtml)
 ----------------------------------------------------------------------------------------------------
