--- a/ZMS/trunk/changes.txt
+++ b/ZMS/trunk/changes.txt
@@ -1456,4 +1456,5 @@ Measure: Re-import content-object configuration for ZMSTable [1.2.0]
 [01308] Removed whitespace in f_standard_html_request (requested by xm).
 [01309] Revised ZMI access-tab: improved performance for LDAPUserFolders.
 [01310] Applied fix for .svn-folders in SVN-update (reported by xm).
+[01311] Added Result-Variable 'normscore' in _zcatalogmanager.py (requested by KPOH)
 ----------------------------------------------------------------------------------------------------
