Added support for logging of the path to the used configure.zcml (xmachina 0023505).

--- a/ZMS/trunk/changes.txt
+++ b/ZMS/trunk/changes.txt
@@ -1461,5 +1461,6 @@ Measure: Re-import content-object configuration for ZMSTable [1.2.0]
 [01313] Added support for custom python-path to PIL-functions.
 --------------------------------------------------
 2010-03-06:zms2-2.12.1-16
-[01314] Applied fix for correct url-encoding of blob-fields (xmachina-stage4 0023501).
+[01314] Applied fix for correct url-encoding of blob-fields (xmachina 0023501).
+[01315] Added support for logging of the path to the used configure.zcml (xmachina 0023505).
 ----------------------------------------------------------------------------------------------------
