--- a/ZMS/trunk/changes.txt
+++ b/ZMS/trunk/changes.txt
@@ -1464,4 +1464,7 @@ Measure: Re-import content-object configuration for ZMSTable [1.2.0]
 [01314] Applied fix for correct url-encoding of blob-fields (xmachina 0023501).
 [01315] Added support for logging of the path to the used configure.zcml (xmachina 0023505).
 [01316] Revised locking of objects (to be done: remove old implementation!).
-----------------------------------------------------------------------------------------------------
+--------------------------------------------------
+2010-03-08:zms2-2.12.1-17
+[01317] Applied fix for copying complex content-objects (reported by gez).
+--------------------------------------------------
