Applied fix for ZMI access-tab

--- a/ZMS/trunk/changes.txt
+++ b/ZMS/trunk/changes.txt
@@ -1467,4 +1467,10 @@ Measure: Re-import content-object configuration for ZMSTable [1.2.0]
 --------------------------------------------------
 2010-03-08:zms2-2.12.1-17
 [01317] Applied fix for copying complex content-objects (reported by gez).
+[01318] Applied fix for ZMI access-tab.
+[01319] Revised locking of objects: remove
+
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
++++ IMPORTANT NOTE: Remove f_bo_checkout and f_eo_checkout from your templates!
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 --------------------------------------------------
