--- a/ZMS/trunk/changes.txt
+++ b/ZMS/trunk/changes.txt
@@ -1479,4 +1479,5 @@ Measure: Re-import content-object configuration for ZMSTable [1.2.0]
 --------------------------------------------------
 2010-03-11:zms2-2.12.1-19
 [1321] Applied fix for ZMI action-lists in Safari (xmachina 0023506). 
+[1322] Applied fix for langunage conformant linking with XStandard editor (requested by DESY)
 --------------------------------------------------
