--- a/ZMS/trunk/changes.txt
+++ b/ZMS/trunk/changes.txt
@@ -1501,3 +1501,6 @@ Measure: Re-import content-object configuration for ZMSTable [1.2.0]
 2010-04-23:zms2-2.12.1-974
 [974] Added new template-set myZMStheme61 (based on JQuery UI).
 --------------------------------------------------
+2010-04-26:zms2-2.12.1-975
+[975] Added prototype for epub export-filter (@see epub-reader for Firefox http://www.epubread.com/de/).
+--------------------------------------------------
