--- a/ZMS/trunk/install.txt
+++ b/ZMS/trunk/install.txt
@@ -23,3 +23,4 @@ Recommended migration path for old ZMS Products
     Step 1. zms-2.9.4-41.tar.gz
     Step 2. zms-2.10.3-18_1.tar.gz
     Step 3. zms-2.10.5-24.tar.gz
+    Step 4. zms-2.13.4-1555.tar.gz
